--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "react-project-02-js401n14",
+  "name": "socket-fetch",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.0",
+    "pexels-api-wrapper": "^1.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
